Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Violation__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <description>File analyzed by PMD.</description>
    <label>File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>