Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Violation__c/fields/Info_URL__c.field-meta.xml
<CustomField>
    <fullName>Info_URL__c</fullName>
    <description>Link to the PMD documentation about the rule violated.</description>
    <label>Info URL</label>
    <type>Url</type>
</CustomField>