Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Violation__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <description>Line of code that violated the rule.</description>
    <label>Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>