Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Violation__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Help message thrown by the rule violated.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>