Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Violation__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Level of severity of the rule violated.</description>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>