Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Violation__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <description>Name of the rule violated.</description>
    <label>Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>