Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Violation__c/fields/Static_Code_Analysis_Result__c.field-meta.xml
<CustomField>
    <fullName>Static_Code_Analysis_Result__c</fullName>
    <label>Static Code Analysis Result</label>
    <referenceTo>Static_Code_Analysis_Result__c</referenceTo>
    <relationshipLabel>Static Code Analysis Violations</relationshipLabel>
    <relationshipName>Static_Code_Analysis_Violations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>