Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Violation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Vulnerability</fullName>
            </value>
            <value>
                <fullName>Code Smell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>